--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
-    <title>Manjeet Kumar Gautam</title>
+    <title>ROHAN KUMAR</title>
 
 </head>
 
 <body>
     <header id="header">
         <nav class="navbar">
-            <h2 class="logo">MKG.</h2>
+            <h2 class="logo">jaiswar</h2>
             <i class="fa-solid fa-bars bar" id="bar" onclick=showMenu()></i>
             <div class="nav-items">
                 <i class="fa-solid fa-xmark close" onclick=closeMenu()></i>
