--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
 
         <div class="hero app">
-            <p class="greet">Hi! My Name is</p>
+            <p class="greet">Hi! My Name isss</p>
             <div class="name">
                 <h1 class="text first-text border-text">kumar</h1>
                 <h1 class="text mid-text">manjeet</h1>
