--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
         </nav>
 
         <div class="hero app">
-            <p class="greet">Hi! My Name isss</p>
+            <p class="greet">Hi! My Name is</p>
             <div class="name">
-                <h1 class="text first-text border-text">kumar</h1>
-                <h1 class="text mid-text">manjeet</h1>
-                <h1 class="text last-text border-text">gautam</h1>
+                <h1 class="text first-text border-text">Rohan</h1>
+                <h1 class="text last-text border-text">kumar</h1>
             </div>
-            <p class="desc-text">I'm a proficient Java Full Stack Web Developer with expertise
-                in front-end and back-end technologies, demonstrated through impactful projects and a strong academic
-                background.</p>
+            <p class="desc-text">I’m  a software developer passionate about creating impactful solutions
+                 using Python, Django, and machine learning. I specialize in web development, data management,
+                  and AI tools, constantly exploring new technologies to solve real-world problems.</p>
             <div class="btns">
                 <a class="btn" href="#contact">Hire Me!</a>
-                <a class="btn" href="./assets/manjeet_resume.docx" download>Resume</a>
+                <a class="btn" href="./assets/Rohan Resume.pdf" download>Resume</a>
             </div>
         </div>
     </header>
@@ -48,19 +47,27 @@
         <h1 class="title">About Me</h1>
         <div class="about-content">
             <div class="img-box">
-                <img src="./assets/IMG_20230407_105452.jpg" alt="">
+                <img src="./assets/rohan_kumar_Photos.jpeg" alt="">
             </div>
             <div class="about-right-content">
-                <p class="about-text">Hi there! My name is Manjeet Kumar Gautam. I love working on web development
-                    projects, both front-endand back-end.
+                <p class="about-text">Hi, I’m Rohan Kumar, a software developer with a passion for creating
+                     impactful solutions through technology. With expertise in Python, Django, and web development,
+                      I’ve developed projects like a job-seeker platform, making the job search and 
+                      hiring process more efficient.
                     <br><br>
-                    I'm always eager to learn more and have earned certifications in web development, Java, and
-                    JavaScript & React.JS. In my free time, I enjoy playing video games, solving problem-solving
-                    questions, and learning new technology, which keeps me creative and motivated.
+                    During my internship at LLamaworx Software Pvt. Ltd., I honed my skills in machine learning,
+                     data management, and web scraping using tools like LangChain, Selenium, and BeautifulSoup.
+                      I enjoy working on innovative projects, whether it's developing AI tools or building user-friendly 
+                      applications that solve real-world problems.
                     <br><br>
-                    I'm looking for a role as a Java Full Stack Web Developer where I can use my skills to work on
-                    exciting projects. I believe my background and passion will help me contribute to your team and I
-                    hope to connect with you soon!
+                    My journey is driven by curiosity and continuous learning. I’m proficient in SQL,
+                     machine learning techniques, and web development, and
+                      I’m always exploring new technologies to expand my skill set.
+                    <br><br>
+                    Outside of coding, I love teaching and sharing knowledge, having tutored students
+                     in digital literacy tools like Microsoft Office and Photoshop. I aim to merge creativity
+                      and logic to build software that makes a difference.
+
                 </p>
                 <div class="about-tabs">
                     <div class="tab-btns">
@@ -78,16 +85,16 @@
                         <div class="edu" style="--clr:#a362ea">
                             <div class="content">
                                 <h3 class="degree-title">Bachelors's in Computer Application</h3>
-                                <p class="clg-name">University of Lucknow</p>
+                                <p class="clg-name">Makhanlal Chaturvedi National University </p>
                             </div>
                         </div>
                     </div>
                     <div class="tab-panel">
-                        <div class="hobby" style="--clr:#fc5f9b">
-                            <p>Playing Video Games</p>
-                        </div>
+                        <div class="hobby" style="--clr:#fc5f9b">                        
+                            <p>Doing Problem Solving Questions</p> 
+                        </div>    
                         <div class="hobby" style="--clr:#a362ea">
-                            <p>Doing Problem Solving Questions</p>
+                            <p>Traveling</p>
                         </div>
                         <div class="hobby" style="--clr:#fc5f9b">
                             <p>Watching Movies</p>
@@ -109,6 +116,7 @@
                 <img src="https://img.icons8.com/?size=100&id=v8RpPQUwv0N8&format=png&color=000000" alt="">
                 <h2>HTML</h2>
             </li>
+            
             <li>
                 <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000" alt="">
                 <h2>CSS</h2>
@@ -118,36 +126,35 @@
                 <h2>JavaScript</h2>
             </li>
             <li>
-                <img src="https://img.icons8.com/?size=100&id=wPohyHO_qO1a&format=png&color=000000" alt="">
-                <h2>React</h2>
+                <img src="./assets/python_48px.png" alt="">
+                <h2>Python</h2>
             </li>
             <li>
                 <img src="https://img.icons8.com/?size=100&id=13679&format=png&color=000000" alt="">
                 <h2>Java</h2>
             </li>
             <li>
-                <img src="https://img.icons8.com/?size=100&id=90519&format=png&color=000000" alt="">
-                <h2>Spring Boot</h2>
+                <img src="./assets/C_lag.png" alt="">
+                <h2>C Language</h2>
             </li>
             <li>
                 <img src="https://img.icons8.com/?size=100&id=UFXRpPFebwa2&format=png&color=000000" alt="">
                 <h2>MySQL</h2>
             </li>
             <li>
-                <img src="./assets/pngegg.png" alt="">
-                <h2>Maven</h2>
+                <img src="./assets/C++.png" alt="">
+                <h2>C++ Language</h2>
             </li>
             <li>
                 <img src="https://img.icons8.com/?size=100&id=PndQWK6M1Hjo&format=png&color=000000" alt="">
                 <h2>Bootstrap</h2>
             </li>
             <li>
-                <img src="./assets/postman.png" alt="">
-                <h1>Postman</h1>
+                <img src="./assets/selenium.png" alt="">
+                <h1>Selenium</h1>
             </li>
             <li>
-                <img src="https://img.icons8.com/?size=100&id=rdKV2dee9wxd&format=png&color=000000" alt="">
-                <h1>Swagger</h1>
+             
             </li>
         </ul>
     </section>
@@ -157,15 +164,17 @@
         <div class="services-area">
             <div class="services-item">
                 <h1>01</h1>
-                <h2>Full Stack Web Development</h2>
-                <p>Comprehensive development services covering both front-end and back-end technologies to build robust
-                    and scalable web applications.</p>
+                <h2>Web Development</h2>
+                <p>Creating robust and dynamic web applications using Python, Django, and SQL.
+                    Designing user-friendly interfaces with HTML5 and CSS for a seamless user experience
+                    </p>
             </div>
             <div class="services-item">
                 <h1>02</h1>
-                <h2>UI/UX Design</h2>
-                <p>Designing intuitive and engaging user interfaces and experiences to enhance the usability and visual
-                    appeal of web applications.</p>
+                <h2>Web Scraping and Automation</h2>
+                <p>Extracting valuable data from websites using tools like Selenium and Beautiful Soup.
+                    Automating repetitive tasks to improve efficiency and accuracy.
+                    </p>
             </div>
             <div class="services-item">
                 <h1>03</h1>
@@ -175,15 +184,17 @@
             </div>
             <div class="services-item">
                 <h1>04</h1>
-                <h2> API Development</h2>
-                <p>Building robust and scalable APIs for seamless integration and communication between different
-                    systems, leveraging Spring Boot and Postman for testing.</p>
+                <h2> AI Tool Development</h2>
+                <p>Building AI-powered tools with LangChain and machine learning technologies to solve complex problems.
+                    Training datasets for intelligent systems similar to ChatGPT.
+                    </p>
             </div>
             <div class="services-item">
                 <h1>05</h1>
-                <h2>Project Management</h2>
-                <p>Managing web development projects from concept to deployment, ensuring timely delivery and adherence
-                    to client requirements.</p>
+                <h2>Data Analysis and Management</h2>
+                <p>Efficient data retrieval and organization using SQL and databases like MySQL and SQLite.
+                    Expertise in data cleaning, training, and testing with machine learning techniques.
+                    </p>
             </div>
         </div>
     </section>
@@ -231,19 +242,19 @@
             </div>
             <div class="footer-column">
                 <h3>Contact Us</h3>
-                <p>Email: manjeetkumar1572000@gmail.com</p>
-                <p>Phone: +91 9506032564</p>
-                <p>Address: Awadh Vihar Colony 3no. Bagh, Kanpur Road, Lucknow, India</p>
+                <p>Email: rohankumarskv29@gmail.com</p>
+                <p>Phone: +91 8808978383</p>
+                <p>Address: Tharwani Meghna Montana next to Sarvoday nagar chikhloli Ambernath west Thane 421501 Maharashtra, India</p>
             </div>
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/profile.php?id=100026046046110" target="_blank"><i
+                    <a href="https://www.facebook.com/rohanjaiswar29/" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
-                    <a href="https://github.com/ManjeetKumarGautam" target="_blank"><i
+                    <a href="https://github.com/Jaiswar098" target="_blank"><i
                             class="fa-brands fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/manjeetkumargautam/" target="_blank"><i
+                    <a href="https://www.instagram.com/r.o.h.a.n.jaiswar/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/rohan-kumar29/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
