this logo update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header id="header">
         <nav class="navbar">
-            <h2 class="logo">jaiswar</h2>
+            <h2 class="logo"></h2>
             <i class="fa-solid fa-bars bar" id="bar" onclick=showMenu()></i>
             <div class="nav-items">
                 <i class="fa-solid fa-xmark close" onclick=closeMenu()></i>
